# Ad-rah

./: .gitignore  ACCESSIBILITY_IMPROVEMENTS.md  ARCHITECTURAL_OPTIMIZATION_COMPLETION.md  ARCHITECTURAL_OPTIMIZATION_SUMMARY.md  CLAUDE.md  CLAUDE_NEW.md  CLEANUP_SUMMARY.md  CODEBASE_OPTIMIZATION_REPORT.md  CURRENT_STATUS_SUMMARY.md  DEPLOYMENT_SUCCESS.md  DEVICE_REGISTRATION_SECURITY.md  DIGITAL_SIGNAGE_IMPLEMENTATION_CHECKLIST.md  ENHANCED_DIGITAL_SIGNAGE_CHECKLIST.md  FIX_DATA_PERSISTENCE.md  KEYS_REFERENCE.md  LICENSE  QUICKSTART.md  RBAC_FIXES_SUMMARY.md  README.md  UNIFIED_CONTENT_OPTIMIZATION_SUMMARY.md  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  copilot-instruction-new.md  copilot-instruction.md  docker-compose.yml  login_test.json  optimize-codebase.ps1  setup-environment.ps1  setup-mongodb.bat  setup-mongodb.sh  test_device.json  test_login.json  token.json
backend/content_service/: .env.example  .env.template  .gitignore  Dockerfile  README.md  README_LOCAL_DEV.md  add_sample_applications.py  ai_manager.py  analytics_dashboard.py  api_test.py  authenticate_device.py  check_content.py  check_content_data.py  check_data.py  check_db.py  check_db_content.py  check_devices.py  check_mongodb_direct.py  create_admin.py  create_credentials.py  create_device.py  create_dubai_setup.py  debug_company_user.py  debug_data.py  debug_email_filter.py  debug_init.py  debug_keys_endpoint.py  debug_nav.py  debug_role_lookup.py  debug_roles.py  debug_users.py  debug_users_api.py  demo_content.json  device_setup.py  docker-compose.yml  end_to_end_test.py  final_test.py  fix_admin_password.py  fix_admin_roles.py  fix_data.py  (+67 more)
backend/content_service/app/: __init__.py  auth.py  auth_service.py  config.py  database_service.py  database_service_optimized.py  default_content_manager.py  device_auth.py  email_service.py  enhanced_device_registration.py  event_processor.py  history_service.py  main.py  models.py  models_ad_slots.py  moderation_worker.py  permission_helpers.py  rbac_models.py  repo.py  (+7 more)
(+424 files in other folders)
