[project]
name = "content-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiodocker>=0.24.0",
    "azure-ai-contentsafety>=1.0.0",
    "azure-servicebus>=7.14.2",
    "fastapi-mail>=1.5.0",
    "fastapi[email,mail]>=0.116.1",
    "jwt>=1.4.0",
    "motor>=3.7.1",
    "passlib>=1.7.4",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "pyjwt>=2.10.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "qrcode[pil]>=8.2",
    "uvicorn>=0.35.0",
]
