[project]
name = "content-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiodocker>=0.24.0",
    "aiohttp>=3.12.15",
    "asyncpg>=0.29.0",
    "azure-ai-contentsafety>=1.0.0",
    "azure-servicebus>=7.14.2",
    "bcrypt>=4.3.0",
    "fastapi-mail>=1.5.0",
    "fastapi[email,mail]>=0.116.1",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.0",
    "imagehash>=4.3.2",
    "jwt>=1.4.0",
    "motor>=3.7.1",
    "passlib>=1.7.4",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.11.7",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.0.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "qrcode[pil]>=8.2",
    "supabase>=2.10.0",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
